# space_ouija

./: meson.build
.github/workflows/: CI.yml
docs/examples/: MessengerFIPS_EDR.ipynb
resources/Cassini/RPWS/: T2000309_25HZ1_WFRFR.LBL
resources/imHexPatterns/: CASSINI_RPWS_LOW_RATE_FULL_MFR0.hexpat  CASSINI_RPWS__WBR_WFR.hexpat  MESSENGER_FIPS_EDR.hexpat
space_ouija/: load_from.hpp  meson.build  py_array.hpp  py_load_from.hpp  space_ouija.cpp
space_ouija/ouija_boards/: meson.build
space_ouija/ouija_boards/_binary_modules/: meson.build
space_ouija/ouija_boards/cassini/: RPWS_LOW_RATE_FULL_MFR0.hpp  RPWS_WAVEFORM_FULL.hpp  RPWS_WIDEBAND_FULL_WBRFR.hpp  __init__.py  cassini.cpp  meson.build  rpws.hpp
space_ouija/ouija_boards/messenger/: FIPS_EDR.hpp  __init__.py  meson.build  messenger.cpp
tests/: meson.build
tests/Cassini/: manual_test.cpp  test_RPWS_LOW_RATE_FULL_MFR0.cpp
tests/full_corpus/: test_full_corpus.py
