boards+={
'cassini':{
  'python_sources': [files('__init__.py')],
  'sources':files('cassini.cpp'),
  'include_directories':include_directories('.'),
  'headers':files(
     'rpws.hpp',
     'RPWS_LOW_RATE_FULL_MFR0.hpp',
     'RPWS_WIDEBAND_FULL_WBRFR.hpp',
     'RPWS_WAVEFORM_FULL.hpp',
     'cassini.hpp'
    )
  }
}
